--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
-PORT=4344
-DB_NAME=online_store
-DB_USER=postgres
-DB_PASSWORD=1234
-DB_HOST=localhost
-DB_PORT=5000
+PORT=
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+SECRET_KEY=
